--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>clonetube homepage</title>
+    <title>clonetube</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -664,7 +664,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
+    <nav class="navbar navbar-expand-lg fixed-top shadow-sm" style="background-color: white;">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="d-flex align-items-center">
                 <button class="btn btn-light me-2" type="button" data-bs-toggle="offcanvas"
@@ -1090,15 +1090,181 @@
                     </div>
                     <div class="video-info">
                         <div class="video-header">
-                            <h3 class="video-title">삼성 X ??? 콜라보 온다?</h3>
+                            <h3 class="video-title">분명 잔잔바리였는데..</h3>
                             <button class="more-options">⋮</button>
                         </div>
                         <div class="video-meta">
-                            <div class="channel-name">하타치 Hatachi</div>
+                            <div class="channel-name">옥선생</div>
                             <div class="video-stats">조회수 4.7만회 • 1년 전</div>
                         </div>
                     </div>
                 </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm3.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">20주년 축제 코앞에 둔 네오플 노조 근황</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">장지</div>
+                            <div class="video-stats">조회수 3.7만회 • 1일 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm4.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">잔잔바리의 악마</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 4.9만회 • 1개월 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm5.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">급발진 전문가</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 4.7만회 • 1개월 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm6.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">평범한 보꾸만강화멘징조율봉자증폭공짜야 아저씨의 일상</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 3.7만회 • 3주 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm7.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">옥선생과 함께하는 태초 항아리 쇼쇼쇼</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 5.7만회 • 3개월 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm2.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">분명 잔잔바리였는데..</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 4.7만회 • 1년 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm3.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">20주년 축제 코앞에 둔 네오플 노조 근황</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">장지</div>
+                            <div class="video-stats">조회수 3.7만회 • 1일 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm4.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">잔잔바리의 악마</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 4.9만회 • 1개월 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm5.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">급발진 전문가</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 4.7만회 • 1개월 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm6.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">평범한 보꾸만강화멘징조율봉자증폭공짜야 아저씨의 일상</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 3.7만회 • 3주 전</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="thumbnail-container">
+                        <img src="sidebarthm7.png" alt="영상 썸네일" class="thumbnail">
+                    </div>
+                    <div class="video-info">
+                        <div class="video-header">
+                            <h3 class="video-title">옥선생과 함께하는 태초 항아리 쇼쇼쇼</h3>
+                            <button class="more-options">⋮</button>
+                        </div>
+                        <div class="video-meta">
+                            <div class="channel-name">옥선생</div>
+                            <div class="video-stats">조회수 5.7만회 • 3개월 전</div>
+                        </div>
+                    </div>
+                </div>
+                
         </aside>
     </div>
 
