Fix: 좋아요 싫어요 공유 더보기 버튼 아이콘 수정

--- a/video.html
+++ b/video.html
@@ -585,6 +585,7 @@
             max-width: 640px;
             width: 100%;
         }
+        
 
         .search-form {
             display: flex;
@@ -1009,13 +1010,13 @@
                         <span class="material-icons">thumb_up</span> 147
                     </button>
                     <button class="action-btn">
-                        <span>👎</span>
+                        <span class="material-icons">thumb_down</span>
                     </button>
                     <button class="action-btn">
-                        <span>📤</span> 공유
+                        <span class="material-icons">share</span> 공유
                     </button>
                     <button class="action-btn">
-                        <span>⋯</span>
+                        <span class="material-icons">more</span>
                     </button>
                 </div>
             </div>
@@ -1070,7 +1071,7 @@
             <div class="video-list">
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm1.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm1.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1086,7 +1087,7 @@
 
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm2.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm2.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1101,7 +1102,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm3.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm3.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1116,7 +1117,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm4.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm4.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1131,7 +1132,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm5.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm5.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1146,7 +1147,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm6.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm6.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1161,7 +1162,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm7.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm7.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1176,7 +1177,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm2.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm2.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1191,7 +1192,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm3.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm3.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1206,7 +1207,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm4.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm4.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1221,7 +1222,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm5.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm5.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1236,7 +1237,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm6.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm6.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
@@ -1251,7 +1252,7 @@
                 </div>
                 <div class="video-item">
                     <div class="thumbnail-container">
-                        <img src="sidebarthm7.png" alt="영상 썸네일" class="thumbnail">
+                        <img src="sidebarthm/sidebarthm7.png" alt="영상 썸네일" class="thumbnail">
                     </div>
                     <div class="video-info">
                         <div class="video-header">
