Fix: 댓글 등록 버튼 수정

--- a/video.html
+++ b/video.html
@@ -1043,7 +1043,7 @@
                     </div>
                     <div class="comment-form">
                         <input type="text" id="comment-text" placeholder="댓글 추가...">
-                        <button class="action-btn" id="submit-comment">등록</button>
+                        <button class="action-btn" style="float: right;" id="submit-comment">등록</button>
                     </div>
                 </div>
 
