Fix: index.html 으로 rename

--- a/subscription.html
+++ b/subscription.html
@@ -402,7 +402,7 @@
         <div class="offcanvas-body sidebar-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link" href="mainhome.html">
+                    <a class="nav-link" href="index.html">
                         <i class="material-icons me-2">home</i>
                         홈
                     </a>
@@ -597,7 +597,7 @@
         <div class="sidebar-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link" href="mainhome.html">
+                    <a class="nav-link" href="index.html">
                         <i class="material-icons me-2">home</i>
                         홈
                     </a>
