--- a/video.html
+++ b/video.html
@@ -789,7 +789,7 @@
         <div class="offcanvas-body sidebar-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="mainhome.html">
+                    <a class="nav-link active" aria-current="page" href="index.html">
                         <i class="material-icons me-2">home</i>
                         홈
                     </a>
